# downloadMusic

./: .dockerignore  .editorconfig  .env  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  README_SOLUCION_YOUTUBE.md  docker-compose.yml  env.example  pom.xml  pyproject.toml  requirements.txt  run-container-realtime.sh  run-docker-realtime.sh  setup.py  test_latest_download.py  youtube_watcher.py
.github/workflows/: ci.yml  release.yml
docs/: README.md
scripts/: install_dependencies.sh  quick_start.sh  test_latest_download.py
src/main/java/org/example/: ChromeOptionsUtil.java  DefinitionSteps.java  FallbackDemo.java  FileDownloadCompletedCondition.java  Locators.java  Methods.java  PerformanceDemo.java  RealDownloadDemo.java  SimpleDownloadDemo.java  YamlFallbackDemo.java
src/main/java/org/example/enums/: DownloadBackend.java
src/main/java/org/example/hooks/: Hooks.java
src/main/java/org/example/models/: DownloadRequest.java  DownloadResult.java  VideoInfo.java
src/main/java/org/example/services/: AdvancedDownloadService.java  DownloadService.java  RealDownloadService.java  SimpleDownloadService.java
src/main/java/org/example/services/backends/: BackendFactory.java  BackendMetrics.java  DownloadBackendService.java
src/main/java/org/example/services/backends/impl/: HttpDirectBackendService.java  JTubeBackendService.java  PyTubeFixBackendService.java  YtDlpBackendService.java
src/main/java/org/example/utils/: Actions.java  ChromeOptionsUtil.java  Constants.java  FileDownloadCompletedCondition.java  Globals.java  Helper.java
src/main/java/org/example/utils/postactions/: PostActions.java  PostActionsMethods.java
src/test/java/org/example/hooks/: Hooks.java
src/test/java/org/example/performance/: BackendPerformanceTest.java
src/test/java/org/example/runner/: RunCucumberTest.java
src/test/java/org/example/services/: DownloadServiceTest.java
src/test/java/org/example/steps/: DownloadSteps.java
src/test/resources/: cucumber.properties  logback-test.xml
src/test/resources/data/: loginJd.yml  songs.yml  urls.txt
src/test/resources/features/: download_with_fallback.feature  downloads.feature
src/youtube_watcher/: __init__.py  __main__.py  cli.py  downloader.py  metadata_handler.py  playlist_monitor.py  watcher.py
tests/: __init__.py  conftest.py  test_watcher.py
